css/style.css
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
@font-face {
    font-family: "Upheaval TT";
    src: url("../assets/fonts/upheavtt.ttf");
}
@font-face {
    font-family: "Exo";
    src: url("../assets/fonts/exo.otf");
}


/* CSS Variables */
:root {
    --rd-purple: #946beb;
    --rd-blue: #1a9fff;
    --rd-black: #222;
    --gradient-1: linear-gradient(45deg, var(--rd-purple) 30%, var(--rd-blue));
    --gradient-2: linear-gradient(45deg, var(--rd-blue) 30%, var(--rd-purple));
    --pixel-font: "Upheaval TT", monospace;
    --body-font: "Exo", serif;
    --transition-speed: 0.1s;
}


body {
    background: var(--rd-black);
    overflow-x: hidden;
}

p {
    margin-bottom: 0.5rem;
}

/* Nav and Footer Styles */

nav, footer {
    background: var(--rd-blue);
    font-family: var(--pixel-font);
}

nav {
    border-bottom: var(--rd-purple) solid 5px;
    font-size: x-large;
}

nav i.bi {
    font-size: small;
}

nav .nav-link:hover, nav .nav-link.show {
    color: white;
}

nav .dropdown-menu.show {
    background: var(--rd-purple);
    border: white solid 1px;
    font-size: large;
}

nav a.dropdown-item:hover {
    background: var(--rd-blue);
    color: white;
}

nav a.dropdown-item:hover svg {
    fill: white;
}

footer {
    border-top: var(--rd-purple) solid 5px;
}

#pixel-font-switch:checked {
    background-color: #946beb;
    border-color: white;
}
#pixel-font-switch {
    border-color: #946beb;
}

/* Jumbotron Styles */
.jumbotron {
    border: white 2px solid;
}

.jumbotron h1,h2 {
    font-family: var(--pixel-font);
    text-shadow: 2px 2px var(--rd-black);
    color: white;
}

p {
    font-family: var(--body-font);
    font-size: larger;
}

.gradient-1 {
    background: var(--gradient-1) !important;
}

.gradient-2 {
    background: var(--gradient-2) !important;
}


/* Features Styles */
#features {
    background: #000;
    border-top: var(--rd-purple) 5px solid;
    border-bottom: var(--rd-purple) 5px solid;
    transition: 0.25s;
}

.feature-card {
    background: var(--rd-blue);
    border: white 2px solid;
    text-align: left;
    width: 100%;
}

.screenshot, .feature-card {
    border-radius: 5px;
}

.feature-card h3 {
    color: white;
    font-family: var(--pixel-font);
    text-shadow: 2px 2px var(--rd-black);
}

.feature-card p {
    font-family: var(--body-font);
}

#extra-features img {
    max-height: 50px;
}

/* Alternating Color Styles */
#features .row {
    padding-top: 30px;
}

#features .row:nth-child(odd) .screenshot {
    border: var(--rd-blue) 2px solid;
}

#features .row:nth-child(odd) .feature-card {
    border: white 2px solid;
    background: var(--rd-blue);
}

#features .row:nth-child(odd) h3 {
    /* text-shadow: 2px 2px var(--rd-purple); */
    padding-right: 20px;
}

#features .row:nth-child(even) .screenshot {
    border: var(--rd-purple) 2px solid;
}

#features .row:nth-child(even) .feature-card {
    border: white 2px solid;
    background: var(--rd-purple);
}

/* Link Styles */
.jumbotron a, footer a, a.btn, .feature-card a, .feature-card a {
    color: var(--rd-purple);
    background: var(--rd-black);
    text-decoration: none;
    padding: 5px;
    border: white 1px solid;
    border-radius: 5px;
    font-family: var(--pixel-font);
}

.jumbotron a:hover, footer a:hover, a.btn:hover, .feature-card a:hover {
    color: white;
    background: var(--rd-purple);
    border-color: var(--rd-black);
    transition: var(--transition-speed);
}

.jumbotron .btn:hover svg {
    fill: white;
    transition: var(--transition-speed);
}

